When someone sends a link, the kahootID for the game is already stored instead of being determined by the link of the other person. The answerContainer was set to a fixed height on mobile devices so that the text wouldn't get squished

--- a/public/style.css
+++ b/public/style.css
@@ -698,6 +698,7 @@ body {
   .answerContainer {
     margin-top: 20px;
     position: relative;
+    height: 200px;
   }
   .answerTimerSmall {
     display: inline-block;
